--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "react-select": "^5.8.3",
+    "react-timezone-select": "^3.2.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
