--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-select": "^5.8.3",
     "react-timezone-select": "^3.2.8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-bg-patterns": "^0.3.0",
     "typescript": "^5"
   }
 }
